# parsing

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
include/: action.hpp  argumentparser.hpp  parsing.hpp
include/parsing/: action.hpp  actiongroup.hpp  argumentparser.hpp  utils.hpp
src/: action.cpp  actiongroup.cpp  argumentparser.cpp  main.cpp  utils.cpp
tests/: main.cpp  test_parsing.cpp  testformatter.hpp
